--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="author" content="Abhisek Rana" />
         <title>Portfolio - Abhisek Rana</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top"
-                ><span class="d-block d-lg-none">Clarence Taylor</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="" /></span></a
+                ><span class="d-block d-lg-none">My Portfolio</span><span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpeg" alt="" /></span></a
             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
@@ -163,8 +163,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a Software Engineer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Chandigarh, I enjoy playing basketball and riding bike early morning.</p>
-                    <p class="mb-2">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, and play chess too. I also have keen interest in Cyber Security too, currently spending my free time learning various aspects of cyber security world and exploring the latest technology advancements in Software industry.</p>
+                    <p>Apart from being a Software Engineer, I enjoy most of my time being outdoors. In the winter, I am an avid trekker and runner. During the warmer months here in Chandigarh, I enjoy playing basketball and riding bike early morning.</p>
+                    <p class="mb-2">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, and play chess too. I also have keen interest in Cyber Security, currently spending my free time learning various aspects of cyber security world and exploring the latest technology advancements in Software industry.</p>
                 </div>
             </section>
             <!-- <hr class="m-0" />
